--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@langchain/community": "^0.2.6",
     "@langchain/core": "^0.2.5",
+    "@langchain/openai": "^0.1.1",
     "langchain": "^0.2.5"
   }
 }
